--- a/projets/AppProduits/src/app/app.component.html
+++ b/projets/AppProduits/src/app/app.component.html
@@ -8,6 +8,6 @@
   </div>
 
   <div style="margin: 10px;">
-    <licorne-editor *ngIf="selectedLicorne" [licorne]="selectedLicorne" [powers]="powers"></licorne-editor>
+    <licorne-editor *ngIf="selectedLicorne" [licorne]="selectedLicorne"></licorne-editor>
   </div>
 </div>
